Stopping point for monoH simplified models
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@147 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -676,3 +676,120 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:0706.2569;%%",
 }
+
+@article{Haisch:2012kf,
+	author         = "Haisch, Ulrich and Kahlhoefer, Felix and Unwin, James",
+	title          = "{The impact of heavy-quark loops on LHC dark matter
+	searches}",
+	journal        = "JHEP",
+	volume         = "1307",
+	pages          = "125",
+	doi            = "10.1007/JHEP07(2013)125",
+	year           = "2013",
+	eprint         = "1208.4605",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "OUTP-12-15P",
+	SLACcitation   = "%%CITATION = ARXIV:1208.4605;%%",
+}
+%%%Various URLs for MC generators (from summary)
+
+@misc{ATLAS_PowhegPythiaMC15Test,
+	collaboration = {ATLAS},
+	title = {{Exotics MadGraph/Powheg MC15 test request}},
+	howpublished = "\url{https://its.cern.ch/jira/browse/ATLMCPROD-1293}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMA,
+	title = {{SVN repository for Powheg input card for model with s-channel exchange of axial vector mediator}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMA/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMV,
+	title = {{SVN repository for Powheg input card for model with s-channel exchange of vector mediator}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMV/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMS,
+	title = {{SVN repository for Powheg input card for model with s-channel exchange of scalar mediator}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_TChannel,
+	title = {{SVN repository for Madgraph inputs with t-channel exchange of colored scalar mediator}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/}",
+	year = {2015}, 
+	note = "[Online; accessed 27-April-2015]"
+}
+
+@misc{ForumSVN_DMP,
+	title = {{SVN repository for Powheg input card for model with s-channel exchange of pseudo-scalar mediator}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMGG,
+	title = {{SVN repository for Powheg input card for model with s-channel exchange of pseudo-scalar mediator, production through top loop from gluon-gluon initial state}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMTTBar,
+	title = {{SVN repository for Madgraph inputs for model with s-channel exchange of pseudo-scalar mediator, produced in association with top quarks}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_S%2BPS/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMSingleB,
+	title = {{SVN repository for Madgraph inputs for simplified model with a colored scalar mediator coupling to DM and b-quarks}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_S%2BPS/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_EWEFTD7,
+	title = {{SVN repository for Madgraph inputs for dimension-7 EFT models with direct DM-EW boson couplings}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Fermion_D7/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_EWMonoHiggs,
+	title = {{SVN repository for Madgraph inputs for vector and scalar mediator models leading to a mono-Higgs signature}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_all/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_EWMonoHiggs_2HDM,
+	title = {{SVN repository for Madgraph inputs for 2HDM model leading to a mono-Higgs signature}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_2HDM/}",
+	year = {2015}, 
+	note = "[Online; accessed 12-May-2015]"
+}
+
+
+@misc{ForumSVN_EWMonoTop,
+	title = {{SVN repository for Madgraph inputs for mono-top models}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_SingleTop/}",
+	year = {2015}, 
+	note = "[Online; accessed 27-April-2015]"
+}
+
+@misc{ForumSVN_monoHEFTD5,
+	title = {{SVN repository for Madgraph inputs for mono-Higgs EFT models}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_D4D5/}",
+	year = {2015}, 
+	note = "[Online; accessed 04-May-2015]"
+}
