--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -3,7 +3,9 @@
 % +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 A complete list of effective operators with direct DM/boson couplings for
-Dirac DM, up to dimension 7, can be found in~\cite{Cotta:2012nj}.
+Dirac DM, up to dimension 7, can be found in~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva}. 
+Higher dimensional operators, up to dimension 8, leading to Higgs+MET signatures,
+are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}. 
 
 %%%%%%%%%%%Dimension 5 operators
 \subsection{Dimension 5 operators}
@@ -43,11 +45,15 @@ from this category have a Lagrangian that includes terms such as:
 
 where $m_Z$ and $m_W$ are the masses of the $Z$ and $W$ boson, $W^{\mu}$ and $Z^{\mu}$
 are the fields of the gauge bosons, $\chi$ denote the Dark Matter fields
-and $\Lambda_5$ is the effective field theory scale.  Note that these operators are of true dimension 7, 
+and $\Lambda_5$ is the effective field theory scale. Note that these operators are of true dimension 7, 
 but reduce to effective dimension 5 once Higgs vevs, contained in the W and Z mass terms, are inserted.  
-As such , one expects  these that operators would naturally  arise in UV complete models where Dark Matter 
+As such, one expects  these that operators would naturally  arise in UV complete models where Dark Matter 
 interacts via a Higgs portal where heavy mediators would couple to the Higgs or other fields in an extended Higgs sector. 
 In such models the full theory may be expected to contain additional operators with Higgs-Dark Matter couplings. 
+
+The Madgraph model parameters are:
+xxhhg5, $\lambda$, $g_{DM} = \frac{(246 GeV)}{\lambda}$	
+
 Concentrating  for the moment on mono-gauge boson signals, the above operator induces signatures with 
 MET in conjunction with Z and W bosons at tree level,
 while at loop level it induces couplings to photon pairs and $Z \gamma$ through W loops.
@@ -71,6 +77,38 @@ however will to use this model, as it would not be sensitive to a scalar mediato
 \end{figure}
 
 \subsubsection{Parameter scan}
+
+%\begin{figure}[!htbp]
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xxhhg5/truth_leading_b_pt.eps}
+%	\end{minipage}
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xxhhg5/truth_leading_b_eta.eps}
+%	\end{minipage}
+%\end{figure}
+%
+%\begin{figure}[!htbp]
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xxhhg5/truth_subleading_b_pt.eps}
+%	\end{minipage}
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xxhhg5/truth_subleading_b_eta.eps}
+%	\end{minipage}
+%\end{figure}
+%
+%\begin{figure}[!htbp]
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xxhhg5/truth_bb_deltar.eps}
+%	\end{minipage}
+%\end{figure}
+%
+%\FloatBarrier
+%\clearpage
 
 
 %%%%%%%%%%%%%Dimension 7 operators
@@ -181,7 +219,53 @@ shown in Fig.~\ref{fig:DMV_EW_kinematics}.
     \label{fig:DMV_EW_kinematics}
 \end{figure}
 
-\paragraph{Completion and validity of EW contact operators}
+%%%%%%%%%%%%%Dimension 8 operators
+
+\subsection{Higher dimensional operators}
+
+Higher dimensional operators (dimension 8) have the form 
+
+$$\bar{\chi} \gamma^{\mu} \chi B_{\mu \nu} H^{\dagger} D^{\nu} H$$
+
+The Madgraph parameters are:
+xgxFhDh, $\Lambda$, $y_{\chi} = \frac{1}{\Lambda^{4}}$	
+
+%\subsection{xgxFhDh Truth Kinematics}
+%
+%\begin{figure}[!htbp]
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xgxFhDh/truth_leading_b_pt.eps}
+%	\end{minipage}
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xgxFhDh/truth_leading_b_eta.eps}
+%	\end{minipage}
+%\end{figure}
+%
+%\begin{figure}[!htbp]
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xgxFhDh/truth_subleading_b_pt.eps}
+%	\end{minipage}
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xgxFhDh/truth_subleading_b_eta.eps}
+%	\end{minipage}
+%\end{figure}
+%
+%\begin{figure}[!htbp]
+%	\begin{minipage}{0.5\textwidth}
+%		\centering
+%		\includegraphics[width = \linewidth]{xgxFhDh/truth_bb_deltar.eps}
+%	\end{minipage}
+%\end{figure}
+%
+%\FloatBarrier
+%\clearpage
+
+
+\subsection{Completion and validity of EW contact operators}
 
 \textbf{[TODO: mention here discussion with Liantao yesterday]}
 
