--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -1,7 +1,7 @@
 Three benchmark simplified models \cite{Carpenter:2013xra,Berlin:2014cfa} 
 are recommended for Higgs+MET searches:
 \begin{itemize}
-	\item A model where a vector mediator ($Z_B'$) is exchanged in the $s-$channel, 
+	\item A model where a leptophobic vector mediator ($Z_B'$) is exchanged in the $s-$channel, 
 	radiates a Higgs or a $Z$ boson and decays into two DM particles (Fig.~\ref{fig:feyn_prod_monoH} (a));
 	\item A model where a scalar mediator $S$ couples to the SM only 
 	through the SM Higgs and decays to two DM particles (Fig.~\ref{fig:feyn_prod_monoH_S});
