added todo list package
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@150 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -62,6 +62,7 @@
   \usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
 }{}
 \fvset{fontsize=\normalsize} % default font size for fancy-verbatim environments
+\usepackage{todo} % for todo list
 
 % Prints an asterisk that takes up no horizontal space.
 % Useful in tabular environments.
